--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,4 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Simple JS Action
-        uses: actions/hello-world-javascript-action@master
+        uses: actions/hello-world-javascript-action@v1.1
+        with:
+          who-to-greet: Erik
