--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,3 +10,5 @@ jobs:
         uses: actions/hello-world-javascript-action@v1.1
         with:
           who-to-greet: Erik
+      - name: Log Greeting Time
+        run: echo "${{ step.greet.outputs.time }}"
